--- a/Graphics Project.cbp
+++ b/Graphics Project.cbp
@@ -9,8 +9,9 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/Graphics Project" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
@@ -38,6 +39,8 @@
 		<Unit filename="Colors.h" />
 		<Unit filename="Line.cpp" />
 		<Unit filename="Line.h" />
+		<Unit filename="Matrix.cpp" />
+		<Unit filename="Matrix.h" />
 		<Unit filename="SDL_Graphics.cpp" />
 		<Unit filename="SDL_Graphics.h">
 			<Option target="&lt;{~None~}&gt;" />
